compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__let_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(x) {\n  let True = x\n  0\n}\n"
---
error: Inexhaustive pattern
  ┌─ /src/one/two.rakun:3:3
  │
3 │   let True = x
  │   ^^^^^^^^^^^^

This assignment uses a pattern that does not match all possible values. If
one of the other values is used then the assignment will crash.

The missing patterns are:

    False

Hint: Use a more general pattern or use `let assert` instead.
