compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__list_bool_2.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 602
expression: "\npub fn main(x) {\n  case x {\n    [] -> 1\n    [True] -> 2\n    [_, False] -> 2\n    [_, _, _, ..] -> 2\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    [] -> 1
    [True] -> 2
    [_, False] -> 2
    [_, _, _, ..] -> 2
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:3
  │  
3 │ ╭   case x {
4 │ │     [] -> 1
5 │ │     [True] -> 2
6 │ │     [_, False] -> 2
7 │ │     [_, _, _, ..] -> 2
8 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    [False]
    [_, True]
