compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__list_zero_two_any.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(x) {\n  case x {\n    [] -> 1\n    [_, _] -> 1\n    [_, _, ..] -> 1\n  }\n}\n"
---
error: Inexhaustive patterns
  ┌─ /src/one/two.rakun:3:3
  │  
3 │ ╭   case x {
4 │ │     [] -> 1
5 │ │     [_, _] -> 1
6 │ │     [_, _, ..] -> 1
7 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    [_]
