compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__exhaustiveness__redundant_1.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "\npub fn main(x) {\n  case x {\n    _ -> 1\n    _ -> 2\n  }\n}\n"
---
warning: Unreachable case clause
  ┌─ /src/warning/wrn.rakun:5:5
  │
5 │     _ -> 2
  │     ^^^^^^

This case clause cannot be reached as a previous clause matches
the same values.

Hint: It can be safely removed.
